--- a/index.css
+++ b/index.css
@@ -1,3 +1,76 @@
-#heading{
-    color: red;
+body{
+    font-family: Arial;
+}
+.logo{
+    width: 150px;
+    height: 100px;
+}
+.header{
+    background-color: gray;
+    padding-left: 2%;
+    padding-right: 2%;
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+   
+    justify-content:space-between   
+    
+}
+.nav-items >ul {
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction:row;
+    justify-content:space-around;
+    text-align: center;
+    list-style-type:none;
+gap: 10px;    
+
+}
+ul li{
+   
+    width:80px;
+    height:50px;
+    background-color: blue;
+    display: flex; /* Make the li a flex container */
+    justify-content: center; /* Center horizontally */
+    align-items: center;
+    color: white;
+    
+}
+
+/* food-card */
+
+
+
+.restaurant-container{
+    padding:10px;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-evenly;
+ 
+}
+
+
+.res-card{
+    padding:10px;
+    margin:10px;
+    background-color:lightgray;
+    width: 200px;
+    height: 300px;
+    border: 1px solid black ;
+    font-size: 0.5rem;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    overflow-wrap: break-word;
+    white-space: normal;
+  
+}
+.food-image{
+    width:200px;
+    height:100px;
+}
+.res-card h1{
+    padding:0;
+    margin-top:5px;
 }
